Added fetch articles function.

--- a/postboard/templates/articles.jinja2
+++ b/postboard/templates/articles.jinja2
@@ -25,5 +25,7 @@
     {% endfor %}
     </table>
 
+    <a href="{{ url_for('main_bp.dashboard') }}">Back</a>
+    <a href="{{ url_for('main_bp.logout') }}">Log out</a>
   {% endif %}
 {% endblock %}
