--- a/postboard/templates/dashboard.jinja2
+++ b/postboard/templates/dashboard.jinja2
@@ -40,7 +40,7 @@
         {{ form.submit }}
       </div>
     </form>
-
+    <a href="{{ url_for('main_bp.articles') }}">Get my articles</a>
     <a href="{{ url_for('main_bp.logout') }}">Log out</a>
     </div>
   {% endif %}
