--- a/postboard/templates/add_article.jinja2
+++ b/postboard/templates/add_article.jinja2
@@ -1,7 +1,7 @@
 {% extends "layout.jinja2" %}
 
 {% block pagestyles %}
-  <link href="{{ url_for('static', filename='dist/css/dashboard.css') }}" rel="stylesheet" type="text/css">
+  <link href="{{ url_for('static', filename='dist/css/add_article.css') }}" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.typekit.net/sus7rlu.css">
 {% endblock %}
 
