--- a/postboard/templates/articles.jinja2
+++ b/postboard/templates/articles.jinja2
@@ -47,7 +47,7 @@
         {{ form.submit }}
       </div>
 
-    <a href="{{ url_for('main_bp.dashboard') }}">Back</a>
+    <a href="{{ url_for('main_bp.add_article') }}">Back</a>
     <a href="{{ url_for('main_bp.logout') }}">Log out</a>
   {% endif %}
 {% endblock %}
