Timestamp variable name change, added update time

--- a/postboard/templates/show_articles.jinja2
+++ b/postboard/templates/show_articles.jinja2
@@ -27,7 +27,8 @@
        <TD class="c2">{{article.author}}</TD>
        <TD class="c2">{{article.title}}</TD>
        <TD class="c2">{{article.body}}</TD>
-       <TD class="c2">{{article.posted_on}}</TD>
+       <TD class="c2">{{article.created_at}}</TD>
+       <TD class="c2">{{article.updated_at}}</TD>
     </TR>
     {% endfor %}
     </table>
